--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
-
 {
   "name": "my-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build --base=/my-project/ && gh-pages -d dist"
   },
-
   "dependencies": {
     "@fortawesome/fontawesome-free": "^7.1.0",
+    "@tanstack/react-query": "^5.90.16",
+    "@tanstack/react-query-devtools": "^5.91.2",
     "axios": "^1.13.2",
+    "flowbite": "^4.0.1",
+    "flowbite-react": "^0.12.15",
     "formik": "^2.4.9",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "jwt-decode": "^4.0.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-hot-toast": "^2.6.0",
+    "react-loader-spinner": "^8.0.0",
     "react-router-dom": "^7.9.5",
+    "react-slick": "^0.31.0",
+    "react-spinners": "^0.17.0",
+    "slick-carousel": "^1.8.1",
     "yup": "^1.7.1"
   },
-
   "devDependencies": {
     "@eslint/js": "^9.36.0",
     "@tailwindcss/vite": "^4.1.17",
